--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
       </div>
       </div>
       <div class="slide">
+        <img src="images/maytinh.png" alt="Banner 2">
+      </div>
+      </div>
+      <div class="slide">
         <img src="images/maytinh.png" alt="Banner 3">
       </div>
       <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -87,7 +91,7 @@
       </div>
       <div class="footer-section">
         <h3>Liên hệ</h3>
-        <p>Email: <a href="mailto:contact@stationery.com">contact@stationery.com</a></p>
+        <p>Email: <a href="mailto: Trungkien09122004@gmail.com">Trungkien09122004@gmail.com</a></p>
         <p>Hotline: 0862 051 226</p>
         <p>Địa chỉ: Mỹ Đình 2, Hà Nội</p>
       </div>
