--- a/lienhe.html
+++ b/lienhe.html
@@ -54,7 +54,7 @@
   <section class="contact-section">
     <h2>Liên hệ với chúng tôi</h2>
     <div class="contact-info">
-      <p>Email: <a href="mailto:contact@stationery.com">contact@stationery.com</a></p>
+      <p>Email: <a href="mailto:Trungkien09122004@gmail.com">Trungkien09122004@gmail.com</a></p>
       <p>Hotline: 0862 051 226</p>
       <p>Địa chỉ: Mỹ Đình 2, Hà Nội</p>
     </div>
@@ -77,7 +77,7 @@
       </div>
       <div class="footer-section">
         <h3>Liên hệ</h3>
-        <p>Email: <a href="mailto:contact@stationery.com">contact@stationery.com</a></p>
+        <p>Email: <a href="mailto:Trungkien09122004@gmail.com">Trungkien09122004@gmail.com</a></p>
         <p>Hotline: 0862 051 226</p>
         <p>Địa chỉ: Mỹ Đình 2, Hà Nội</p>
       </div>
